[ der wandersmann ] LaTeX/lilypond
- latex file will be finished
- first lines added to lilypond file

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -57,7 +57,7 @@
 \songsection{Folk and Medieval}
     \begin{songs}{}
         %\input{../src/das_bier_ich_in_der_rechten_trug/LaTeX/das_bier_ich_in_der_rechten_trug}                              \sclearpage
-        %\input{../src/der_wandersmann/LaTeX/der_wandersmann}                                                                \sclearpage
+        \input{../src/der_wandersmann/LaTeX/der_wandersmann}                                                                \sclearpage
         %\input{../src/dunkle_stunde/LaTeX/dunkle_stunde}                                                                    \sclearpage
         %\input{../src/far_over_the_misty_mountains_cold/LaTeX/far_over_the_misty_mountains_cold}                            \sclearpage
         \input{../src/geisterschiff/LaTeX/geisterschiff}                                                                    \sclearpage
