--- a/src/der_wandersmann/LaTeX/der_wandersmann.tex
+++ b/src/der_wandersmann/LaTeX/der_wandersmann.tex
@@ -11,6 +11,8 @@
 
     \label{derwandersmann}
 
+    \capo{4}
+
     \begin{center}
         \gtab{C}{032010:032010}
         \gtab{G}{320033:210034}
@@ -45,7 +47,7 @@
         als ^einst ein Sturm das M^eer zerw\"{u}hlt
         und M^ann und Maus vom Sch^iffsdeck sp\"{u}lt.
 
-        Das Sch^iff droht^e zu sink^en,
+        Das Sch^iff droht^e zu sin^ken,
         die S^egel rissen w^ie Papier.
         Ich holte L^uft und bl^ie\ss{} den St^urm fort;
         das L^einen ^als Bew^eis daf\"{u}r!
@@ -84,7 +86,7 @@
 
     \beginchorus\replay[chorus]
         Es ^ist geleert das ^erste Fass,
-        kommt ^Br\"{u}derlein erz^\"{a}hlt noch was
+        kommt Br^\"{u}derlein erz^\"{a}hlt noch was
         von ^euren weiten ^Reisen.
         ^Sprecht und hebt das ^Glas!
     \endchorus
@@ -103,7 +105,7 @@
 
     \beginchorus\replay[chorus]
         \lrep Es fl^iesst der Wein, es fl^iesst das Bier!
-        \[F]Hoch die Kr\"{u}ge tr\[G]inken wir! \rrep \rep{4}
-        \textnote{4ter rit.!}
+        H\[F]och die Kr\"{u}ge tr\[G]inken wir! \rrep \rep{4}
+        \textnote{4. Mal rit., ``wir'' lange halten.}
     \endchorus
 \endsong
