[ der wandersmann ] LaTeX typo correction
GH-2

--- a/src/der_wandersmann/LaTeX/der_wandersmann.tex
+++ b/src/der_wandersmann/LaTeX/der_wandersmann.tex
@@ -104,7 +104,7 @@
     \endverse
 
     \beginchorus\replay[chorus]
-        \lrep Es fl^iesst der Wein, es fl^iesst das Bier!
+        \lrep Es fl^ie\ss{}t der Wein, es fl^ie\ss{}t das Bier!
         H\[F]och die Kr\"{u}ge tr\[G]inken wir! \rrep \rep{4}
         \textnote{4. Mal rit., ``wir'' lange halten.}
     \endchorus
